# DSEngine

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  AI_Build_Verification_SOP.md  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.FreeType  CMakeLists.txt.Physx  CMakeLists.txt.easy_profile_core  CMakeLists.txt.fmod  CMakeLists.txt.imgui  CMakeLists.txt.lua_script  CMakeLists.txt.luasocket  CMakePresets.json  CODE_OF_CONDUCT.md  COLLABORATION.md  CONTRIBUTING.md  DSEngine.runsettings  DSEngine_新引擎演进步骤方案_2026版.md  DSEngine_阶段1_2D_MVP缺口清单_研发任务列表.md  EDITOR_DEVELOPMENT.md  Editor_Usage_Guide.md  LAUNCHER_DEVELOPMENT.md  LICENSE  MANUAL.md  NOTICE  README.en.md  README.md  ROADMAP.md  SECURITY.md  Sample21_对照验收清单_逐帧行为级.md  TESTING_CTEST_GUIDE.md  THIRD_PARTY_LICENSES.md  _build_uitest.bat  _run_uitest.ps1  batch_submoduleize_round2.bat  build_all.bat  build_fast.bat  build_fast_cpp.bat  (+7 more)
apps/editor_cpp/: CMakeLists.txt  editor.rc
apps/editor_cpp/core/: CMakeLists.txt  command_bus.cpp  command_bus.h  editor_command.h  query_service.cpp  query_service.h  tool_sink.h  view_models.h
apps/editor_cpp/fonts/: .gitignore  README.md  download_fonts.ps1
apps/editor_cpp/src/: editor_2d_tools.cpp  editor_2d_tools.h  editor_agent_panel.cpp  editor_agent_panel.h  editor_agent_protocol.h  editor_ai_config.cpp  editor_ai_config.h  editor_anim_retarget.cpp  editor_anim_retarget.h  editor_anim_retarget_core.cpp  editor_anim_retarget_core.h  editor_anim_state_machine.cpp  editor_anim_state_machine.h  editor_animation_clip.cpp  editor_animation_clip.h  editor_animation_timeline.cpp  editor_animation_timeline.h  editor_app.cpp  editor_app.h  editor_asset_browser.cpp  editor_asset_browser.h  editor_asset_db.cpp  editor_asset_db.h  editor_asset_db_core.cpp  editor_asset_importer.cpp  editor_asset_importer.h  editor_audio_panel.cpp  editor_audio_panel.h  editor_autosave.cpp  editor_autosave.h  editor_autosave_core.cpp  editor_autosave_core.h  editor_aux_panels.cpp  editor_aux_panels.h  editor_blueprint.cpp  editor_blueprint.h  editor_blueprint_compiler.cpp  editor_blueprint_compiler.h  editor_blueprint_extras.cpp  editor_blueprint_vm.cpp  (+148 more)
apps/runtime/cpp_host/: CMakeLists.txt  main.cpp
apps/runtime/lua_host/: CMakeLists.txt  lua_host.rc  main.cpp
apps/standalone/: CMakeLists.txt  main.cpp  standalone.rc
apps/tools/dse_cli/: CMakeLists.txt  main.cpp
apps/web_host/: CMakeLists.txt  shell.html  web_main.cpp
examples/sdk_consumer/: CMakeLists.txt  README.md  demo_scene.lua  game_main.cpp  main.cpp
samples/plugins/: CMakeLists.txt  sample_plugin.cpp
tests/engine/: CMakeLists.txt  build_generation_guard_test.cpp  cpp_runtime_startup_scene_test.cpp  lua_resource_injection_test.cpp  lua_runtime_core_single_test.cpp  lua_runtime_smoke_entry.cpp  lua_runtime_smoke_single_test.cpp  lua_test_main.cpp  main.cpp  mesh_material_desc_test.cpp  mesh_render_material_desc_static_test.cpp  runtime_host_integration_test.cpp  runtime_smoke_snapshot_test.cpp
tests/engine/assets/: asset_builder_static_test.cpp  asset_manager_test.cpp  importer_cooker_test.cpp
tests/engine/audio/: audio_system_test.cpp
tests/engine/base/: time_test.cpp  tween_test.cpp
tests/engine/core/: dynamic_library_test.cpp  event_bus_test.cpp  job_system_test.cpp  memory_pool_test.cpp  object_pool_test.cpp
tests/engine/ecs/: world_test.cpp
tests/engine/editor/: editor_undo_test.cpp
tests/engine/input/: input_test.cpp
tests/engine/physics/: physics3d_system_test.cpp
tests/engine/platform/: screen_test.cpp
tests/engine/profiler/: cpu_profiler_test.cpp  memory_profiler_test.cpp  render_profiler_test.cpp
tests/engine/render/: command_buffer_test.cpp  rhi_device_test.cpp  ui_render_system_test.cpp
tests/engine/runtime/: frame_pipeline_static_regression_test.cpp  reference_demo_screenshot_test.cpp  runtime_access_test.cpp
tests/engine/scene/: editor_scene_io_bridge_test.cpp  octree_test.cpp  prefab_test.cpp  scene_flow_test.cpp  transform_system_test.cpp
tests/engine/scripting/: cpp_business_runtime_test.cpp  lua_runtime_test.cpp
tests/gtest/integration/: CMakeLists.txt  assetmanager_vfs_integration_test.cpp  ecs_physics2d_integration_test.cpp  eventbus_servicelocator_integration_test.cpp  jobsystem_eventbus_integration_test.cpp  lua_runtime_integration_test.cpp  rendergraph_integration_test.cpp
tests/gtest/smoke/: CMakeLists.txt  bind_group_pixel_smoke_test.cpp  depth_only_pixel_smoke_test.cpp  dx11_rhi_smoke_test.cpp  editor_view_mode_pixel_smoke_test.cpp  engine_core_services_smoke_test.cpp  foliage_wind_pixel_smoke_test.cpp  forward_pbr_pixel_smoke_test.cpp  forward_shaded_pixel_smoke_test.cpp  gbuffer_mesh_pixel_smoke_test.cpp  gl_rhi_smoke_test.cpp  hair_pixel_smoke_test.cpp  immediate_draw_pixel_smoke_test.cpp  indirect_mesh_pixel_smoke_test.cpp  instanced_mesh_pixel_smoke_test.cpp  instanced_shaded_pixel_smoke_test.cpp  instanced_ssbo_pixel_smoke_test.cpp  instanced_vertex_rate_pixel_smoke_test.cpp  lua_host_smoke_test.cpp  lua_lifecycle_smoke_test.cpp  minimal_3d_scene_smoke_test.cpp  morph_shaded_pixel_smoke_test.cpp  physics3d_smoke_test.cpp  point_spot_shadow_shaded_pixel_smoke_test.cpp  postprocess_pixel_smoke_test.cpp  rhi_pixel_harness.cpp  rhi_pixel_harness.h  runtime_lifecycle_smoke_test.cpp  skinned_instanced_shaded_pixel_smoke_test.cpp  skinned_mesh_pixel_smoke_test.cpp  skinned_shaded_pixel_smoke_test.cpp  skybox_pixel_smoke_test.cpp  spine_unlit2d_pixel_smoke_test.cpp  spot_shaded_pixel_smoke_test.cpp  sprite_batch_pixel_smoke_test.cpp  sprite_batch_sdf_pixel_smoke_test.cpp  sprite_batch_vfx_pixel_smoke_test.cpp  sprite_primitive_smoke_test.cpp  terrain_external_pixel_smoke_test.cpp  tree_shared_template_pixel_smoke_test.cpp  (+1 more)
tests/gtest/unit/: CMakeLists.txt  asset_manager_test.cpp  bezier_test.cpp  components_3d_test.cpp  debug_test.cpp  event_id_test.cpp  (+15 more)
tests/spine/: CMakeLists.txt  spine_system_test.cpp
tools/dssl_compiler/: CMakeLists.txt  dssl_codegen.cpp  dssl_codegen.h  dssl_compiler.cpp  dssl_parser.cpp  dssl_parser.h
tools/shader_compiler/: CMakeLists.txt  shader_compiler.cpp
(+2330 files in other folders)
